--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,33 @@
 <head>
 	<meta charset="utf-8">
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="./styles/styles.css">
 </head>
-<body>
- <p>Welcome to chat app!</p>
+<body class="chat">
+
+<div class="chat__sidebar">
+	<h3>People</h3>
+	<div id="users"></div>
+</div>
+<div class="chat__main">
+	<ol id="messages" class="chat__messages"></ol>
+
+	<div class="chat__footer">
+		<form id="message-form">
+		 	<input type="text" id="message" placeholder="Message" autofocus autocomplete="off" />
+		 	<button>Send</button>
+	 	</form>
+	 
+	 <button id="send-location">Send Location</button>
+	</div>
+	
+
+</div>
+ 
 
  <script src='/socket.io/socket.io.js'></script>
+ <script src='/js/libs/jquery-3.2.0.js'></script>
+ <script src='/js/libs/moment.js'></script>
  <script src='/js/index.js'> </script>
 </body>
 </html>
